--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 
 [packages]
 psycopg2 = "*"
-SQLAlchemy = ">=1.1"
+SQLAlchemy = "*"
 Flask = "*"
 Flask-SQLAlchemy = "*"
 Flask-Migrate = "*"
 Flask-Script = "*"
 Flask-Admin = "*"
+restless = "*"
