--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,7 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 
 [packages]
+alembic_autogenerate_enums = "*"
 psycopg2 = "*"
 SQLAlchemy = "*"
 Flask = "*"
