Also isort __init__.pys & save config in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,7 @@ convention = numpy
 max-line-length = 120
 max-complexity = 15
 ignore = D105
+
+[isort]
+include_trailing_comma = True
+use_parentheses = True
