--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask-Admin==1.5.1
 Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.3.2
 Flask==1.0.2
+Flask-DebugToolbar==0.10.1
 psycopg2==2.7.4
 raven[flask]==6.9.0
 restless==2.1.1
