--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 alembic_autogenerate_enums==0.0.2
+celery==4.1.1
 flake8==3.5.0
 Flask-Admin==1.5.1
 Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.3.2
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
-psycopg2==2.7.4
+gunicorn==19.8.1
+psycopg2-binary==2.7.4
 raven[flask]==6.9.0
+redis==2.10.6
 restless==2.1.1
 slugify==0.0.1
 Sphinx==1.7.5
