--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Flask-SQLAlchemy==2.3.2
 Flask==1.0.2
 Flask-DebugToolbar==0.10.1
 gunicorn==19.8.1
-psycopg2-binary==2.7.4
+psycopg2==2.7.4
 raven[flask]==6.9.0
 redis==2.10.6
 restless==2.1.1
