Cleaner images with less bloat

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,9 @@
-.git/
+/*
+!/requirements.txt
+!/MANIFEST.in
+!/matcher/
+!/README.md
+!/setup.py
+!/setup.cfg
 __pycache__/
-.mypy_cache/
 *.pyc
-.DS_Store
-.venv/
-venv
-dist/
-build/
-*.egg-info/
-doc/_build/
-.eggs/
-/instance/
-/secrets/
-docker-compose*
-Dockerfile
