--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,7 +11,11 @@ x-internal:
 
 services:
   web:
-    command: gunicorn -w 4 matcher:app -b 0.0.0.0:5000 --reload
+    command: >
+      sh -c '
+      matcher download-countries && 
+      gunicorn -w 4 matcher:app -b 0.0.0.0:5000 --reload
+      '
     volumes:
       - './matcher:/app/matcher'
     networks:
