--- a/docker-compose.env
+++ b/docker-compose.env
@@ -2,5 +2,6 @@ POSTGRES_HOST=db
 POSTGRES_USERNAME=matcher
 POSTGRES_PASSWORD_FILE=/run/secrets/postgres-password
 POSTGRES_DATABASE=matcher
+POSTGRES_TEST_DATABASE=matcher_test
 REDIS_HOST=redis
 SECRET_KEY_FILE=/run/secrets/secret-key
