--- a/requirements.in
+++ b/requirements.in
@@ -9,9 +9,11 @@ Flask-Migrate
 Flask-RESTful
 Flask-RESTPlus
 Flask-SQLAlchemy
+Flask-Testing
 gunicorn
 psycopg2
 psycopg2-binary
+pytest
 raven[flask]
 redis
 restless
