--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,16 @@ python:
 
 cache: pip
 
+install:
+  - pip install codecov pytest-cov
+  - pip install -r requirements.txt
+
 before_script:
   - psql -c 'create database matcher;' -U postgres
 
 script:
   - python setup.py flake8
-  - pytest
+  - pytest --cov=./
+
+after_success:
+  - codecov
