--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,8 +14,11 @@ services:
     command: >
       sh -c '
       matcher download-countries && 
-      gunicorn -w 4 matcher:app -b 0.0.0.0:5000 --reload
+      flask run --host 0.0.0.0 --port 5000
       '
+    environment:
+      FLASK_ENV: development
+      FLASK_APP: matcher
     volumes:
       - './matcher:/app/matcher'
     networks:
