ExportTemplate tests, remove needs prop in fields
Some bug fixes, like incorrect quoting as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ python:
 cache: pip
 
 install:
-  - pip install codecov pytest-cov
+  - pip install codecov
   - pip install -r requirements-dev.txt
   - python setup.py develop
 
