--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     secrets:
       - postgres-password
       - secret-key
+    volumes:
+      - exports:/data/exports
     networks:
       - internal
       - proxy
@@ -32,6 +34,8 @@ services:
       - redis
       - db
       - migrate
+    volumes:
+      - exports:/data/exports
     secrets:
       - postgres-password
       - secret-key
@@ -110,6 +114,7 @@ volumes:
   redis:
   postgres:
   scrapy:
+  exports:
 
 secrets:
   postgres-password:
