Remove old admin

--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,6 @@
 alembic_autogenerate_enums
 celery
 Flask
-Flask-Admin
 Flask-Injector
 Flask-Migrate
 Flask-RESTful
@@ -16,3 +15,4 @@ redis
 SQLAlchemy
 tqdm
 Unidecode
+WTForms
