--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,8 @@ click==6.7 \
     --hash=sha256:29f99fc6125fbc931b758dc053b3114e55c77a6e4c6c3a2674a2dc986016381d \
     --hash=sha256:f15516df478d5a56180fbf80e68f206010e6d160fc39fa508b65e035fd75130b \
     # via flask
+flask-admin==1.5.1 \
+    --hash=sha256:e3a8268fdb6c271a44196de7f2a85faff886df18061d337e66b4b3c80e9c4f23
 flask-injector==0.10.1 \
     --hash=sha256:df12eee64027f86fd6ca46f1e324d938277035ded79a104426bf93eadac2a9a8 \
     --hash=sha256:e5436ba5637ce049e72bf2868ad0fe086beeb7e00b1bd47d6b356931be4f8076
