Start to read the imported files and map columns

--- a/docker-compose.env
+++ b/docker-compose.env
@@ -5,4 +5,4 @@ POSTGRES_DATABASE=matcher
 POSTGRES_TEST_DATABASE=matcher_test
 REDIS_HOST=redis
 SECRET_KEY_FILE=/run/secrets/secret-key
-EXPORTS_LOCATION=/data/exports
+DATA_DIR=/data
