--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,8 @@ billiard==3.5.0.4 \
 blinker==1.4 \
     --hash=sha256:471aee25f3992bd325afa3772f1063dbdbbca947a041b8b89466dc00d606f8b6 \
     # via raven
+celery-once==2.0.0 \
+    --hash=sha256:a25072b6c524379cb15b1aadc1cdd5f01cda5220a6e2f04375d2b9c56222ad1a
 celery==4.2.1 \
     --hash=sha256:77dab4677e24dc654d42dfbdfed65fa760455b6bb563a0877ecc35f4cfcfc678 \
     --hash=sha256:ad7a7411772b80a4d6c64f2f7f723200e39fb66cf614a7fdfab76d345acc7b13
@@ -56,14 +58,14 @@ flask-wtf==0.14.2 \
 flask==1.0.2 \
     --hash=sha256:2271c0070dbcb5275fad4a82e29f23ab92682dc45f9dfbc22c02ba9b9322ce48 \
     --hash=sha256:a080b744b7e345ccfcbc77954861cb05b3c63786e93f2b3875e0913d44b43f05
-ftfy==5.4.1 \
-    --hash=sha256:619e68f9844cadd03e0d835e9b6790b2399357100c57fddae14d93a8de81e114
+ftfy==5.5.0 \
+    --hash=sha256:525ea45a871f52ddb170e66b01f35f1b3022995016c81efa305e628937b85443
 gunicorn==19.9.0 \
     --hash=sha256:aa8e0b40b4157b36a5df5e599f45c9c76d6af43845ba3b3b0efe2c70473c2471 \
     --hash=sha256:fa2662097c66f920f53f70621c6c58ca4a3c4d3434205e608e121b5b3b71f4f3
-injector==0.13.4 \
-    --hash=sha256:53031bdd3472108ab81e69c44cd4c2b6dad059f692b255dfd17ee7852afa58a0 \
-    --hash=sha256:f10435d05c552731a49e8221b079f4783da679b75a1ad28ebbdf06370f11c690 \
+injector==0.14.1 \
+    --hash=sha256:1413e2b1dd90c594689bc292bcc02628b969840c1292131455927f292c65e99a \
+    --hash=sha256:d3c5a8d1ace69cfb4f97042a0c6ab50f34e05b7fa1d8a62d541c2f64abed2830 \
     # via flask-injector
 itsdangerous==0.24 \
     --hash=sha256:cbb3fcf8d3e33df861709ecaf89d9e6629cff0a217bc2848f1b41cd30d360519 \
@@ -138,8 +140,8 @@ python-dateutil==2.7.3 \
 python-editor==1.0.3 \
     --hash=sha256:a3c066acee22a1c94f63938341d4fb374e3fdd69366ed6603d7b24bed1efc565 \
     # via alembic
-python-slugify==1.2.5 \
-    --hash=sha256:5dbb360b882b2dabe0471a1a92f604504d83c2a73c71f2098d004ab62e695534
+python-slugify==1.2.6 \
+    --hash=sha256:7723daf30996db26573176bddcdf5fcb98f66dc70df05c9cb29f2c79b8193245
 pytz==2018.5 \
     --hash=sha256:a061aa0a9e06881eb8b3b2b43f05b9439d6583c206d0a6c340ff72a7b6669053 \
     --hash=sha256:ffb9ef1de172603304d9d2819af6f5ece76f2e85ec10692a524dd876e72bf277 \
@@ -158,16 +160,16 @@ six==1.11.0 \
     --hash=sha256:70e8a77beed4562e7f14fe23a786b54f6296e34344c23bc42f07b15018ff98e9 \
     --hash=sha256:832dc0e10feb1aa2c68dcc57dbb658f1c7e65b9b61af69048abc87a2db00a0eb \
     # via flask-restful, flask-restplus, python-dateutil
-sqlalchemy==1.2.11 \
-    --hash=sha256:ef6569ad403520ee13e180e1bfd6ed71a0254192a934ec1dbd3dbf48f4aa9524
-tqdm==4.25.0 \
-    --hash=sha256:5ef526702c0d265d5a960a3b27f3971fac13c26cf0fb819294bfa71fc6026c88 \
-    --hash=sha256:a3364bd83ce4777320b862e3c8a93d7da91e20a95f06ef79bed7dd71c654cafa
+sqlalchemy==1.2.12 \
+    --hash=sha256:c5951d9ef1d5404ed04bae5a16b60a0779087378928f997a294d1229c6ca4d3e
+tqdm==4.26.0 \
+    --hash=sha256:18f1818ce951aeb9ea162ae1098b43f583f7d057b34d706f66939353d1208889 \
+    --hash=sha256:df02c0650160986bac0218bb07952245fc6960d23654648b5d5526ad5a4128c9
 typing==3.6.6 \
     --hash=sha256:4027c5f6127a6267a435201981ba156de91ad0d1d98e9ddc2aa173453453492d \
     --hash=sha256:57dcf675a99b74d64dacf6fba08fb17cf7e3d5fdff53d4a30ea2a5e7e52543d4 \
     --hash=sha256:a4c8473ce11a65999c8f59cb093e70686b6c84c98df58c1dae9b3b196089858a \
-    # via flask-injector, injector
+    # via flask-injector
 unidecode==1.0.22 \
     --hash=sha256:72f49d3729f3d8f5799f710b97c1451c5163102e76d64d20e170aedbbd923582 \
     --hash=sha256:8c33dd588e0c9bc22a76eaa0c715a5434851f726131bd44a6c26471746efabf5
