--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '3.4'
+version: "3.4"
 services:
   web:
     build: .
     image: sandhose/matcher:latest
-    command: gunicorn -w 4 matcher:app -b 0.0.0.0:5000
+    command: gunicorn -k gevent -w 4 matcher:app -b 0.0.0.0:5000
     expose:
       - "5000"
     env_file:
@@ -27,7 +27,7 @@ services:
   worker:
     build: .
     image: sandhose/matcher:latest
-    command: matcher worker -l info --uid nobody --gid nobody
+    command: celery worker -A matcher:celery -P gevent -l info --uid nobody --gid nobody
     env_file:
       - docker-compose.env
     depends_on:
@@ -64,7 +64,7 @@ services:
   redis:
     image: redis:alpine
     volumes:
-      - 'redis:/data'
+      - "redis:/data"
     networks:
       - internal
     labels:
@@ -90,7 +90,7 @@ services:
       POSTGRES_USER: matcher
       POSTGRES_PASSWORD_FILE: /run/secrets/postgres-password
     volumes:
-      - 'postgres:/var/lib/postgresql/data'
+      - "postgres:/var/lib/postgresql/data"
     secrets:
       - postgres-password
     networks:
