--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ convention = numpy
 [flake8]
 max-line-length = 120
 max-complexity = 15
-ignore = D105
+ignore = D105,W504
 
 [isort]
 include_trailing_comma = True
