--- a/setup.cfg
+++ b/setup.cfg
@@ -8,8 +8,7 @@ convention = numpy
 
 [flake8]
 max-line-length = 120
-max-complexity = 15
-ignore = D105,W504
+ignore = D105,W504,C901
 
 [isort]
 include_trailing_comma = True
