--- a/setup.cfg
+++ b/setup.cfg
@@ -8,8 +8,10 @@ convention = numpy
 
 [flake8]
 max-line-length = 120
-ignore = D105,W504,C901
+ignore = D105,W503,W504,C901
 
 [isort]
 include_trailing_comma = True
 use_parentheses = True
+multi_line_output = 3
+line_length = 88
