--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 
+dist: xenial
+
 addons:
   postgresql: "9.6"
 
@@ -7,8 +9,8 @@ services:
   - postgresql
 
 python:
-  - "3.5"
   - "3.6"
+  - "3.7"
 
 cache: pip
 
