Set the postgres version in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,7 +81,7 @@ services:
       - traefik.enable=true
 
   db:
-    image: postgres:alpine
+    image: postgres:11-alpine
     environment:
       POSTGRES_USER: matcher
       POSTGRES_PASSWORD_FILE: /run/secrets/postgres-password
