ci: call flake8 directly as setuptools integration gets deprecated

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_script:
 
 script:
   - matcher db upgrade
-  - python setup.py flake8
+  - flake8 matcher
   - pytest --cov=./
 
 after_success:
